--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(Qbox VERSION 0.1.0)
 find_package(Freetype REQUIRED)
 find_package(SDL2 REQUIRED)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 file(GLOB ImGui_Src libs/imgui/*.cpp libs/imgui/backends/imgui_impl_glfw.cpp libs/imgui/backends/imgui_impl_opengl3.cpp libs/ImGuiFileDialog/ImGuiFileDialog.cpp)
 file(GLOB Glad_Src libs/glad/gl.c)
 
@@ -30,3 +33,4 @@ target_link_libraries(${PROJECT_NAME} glm::glm)
 
 target_link_libraries(${PROJECT_NAME} ${FREETYPE_LIBRARIES})
 target_link_libraries(${PROJECT_NAME} glfw)
+target_link_libraries(${PROJECT_NAME} ${CMAKE_DL_LIBS} pthread)
